Fix overflow issue with long words

--- a/frontend/src/components/chat/styles.css
+++ b/frontend/src/components/chat/styles.css
@@ -256,6 +256,10 @@
     border-radius: 4px;
 }
 
+.ChatMessages .chat-message {
+    overflow-wrap: break-word;
+}
+
 .react-bs-container-body tr,
 .react-bs-container-body input,
 .interested-sex select {
